Inclusão do fotmulário de login + inicio da pag Agendamentos

--- a/HomeAcademia.html
+++ b/HomeAcademia.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="content-type" content="text/html;charset=utf-8">
 	<title> Home - Rock Fit Academia </title>
 	<link rel="stylesheet" href="reset.css">
-	<link rel="stylesheet" href="Atividades.css"> 
+	<link rel="stylesheet" href="HomeAcademia_at.css"> 
 	<!-- Essa tag deixa o conteúdo do site ajustável em 100% em qualquer plataforma em que for aberto -->
 	<meta name="viewport" content="width-device-width, initial-scale=1.0">
 </head>
@@ -15,19 +15,20 @@
 			<nav>
 				<ul>
 					<li> <a href="unidade.html" > Unidade</a> </li>
-					<li> <a href="espaçoaluno.html"> Espaço do aluno </a> </li>
+					<li> <a href="espacoAluno.html"> Espaço do aluno </a> </li>
 					<li> <a href="agendamentos.html"> Agendamentos </a> </li>
 					<li> <a href="quemsomos.html"> Quem somos </a> </li>
 				</ul>
 			</nav>
 		</div> 
 	
-	</header>
+	</header> 
 	<main class= "planos"> 
 		<ul>
 		<ol class="paragrafo">
 			<img src="promosmart.png">
-			<h2> Incluso: </h2>
+			<h2> Incluso: </h2> <br>
+			<p class="incluso_input-border"> </p> 
 				<p> 
 					<li> Musculação </li> 
 					<li> Funcional </li>
@@ -37,11 +38,14 @@
 		</ol>
 		<ol class="paragrafo" >
 			<img src="promoiron.png">
-			<h2> Incluso: </h2>
+			<h2> Incluso: </h2> <br>
+			<p class="incluso_input-border"> </p> 
 				<p> 
 					<li> Musculação </li> 
 					<li> Treine com seus amigos </li>
 					<li> Primeira avaliação gratuita </li>
+					<br> <br>
+
 				</p>
 		</ol>
 		</ul>
@@ -49,9 +53,9 @@
 	<footer>
 		<div style="position: relative; top: 0px; left: 0px">
 			<img src="bg.jpg" border="0">
-		<div style="position: absolute; top: 0px; left: 550px">
+		<div style="position: absolute; top: 0px; left: 460px">
 			<img src="logonome.jpg">
 		<p> Copyrigght Rock Fit Academia - 2021 </p>
-	</footer>
+	</footer> 
 </body>
 </html>
